refactor(model): replace external BoundingBox dependency with local Record
- Introduce local BoundingBox record to decouple domain model from Apache FontBox
- Switch from AWT Rectangle to Rectangle2D.Float for better floating-point precision
- Update extractors and tests (ImageExtractor, JsonResultWriter) to match new API